@@ -10,6 +10,7 @@ Changes to 0.7.0
 * Fixed saving files warnings about existing files and fixed bad
   warning on loading files
 * StandardDeviation now works
+* sin,cos,sinh,cosh now work with complex arguments
 * Some memory profiling.  Allocate internal structures in long
   continuous blocks and further fixup the engine to be nicer with
   separator nodes which can now take a lot of arguments and really whack
