@@ -1,3 +1,9 @@
+Thu Aug 05 01:21:03 2004  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: wrap both long description labels on the create
+	  plot dialog and align them left.  Add mnemonics to the notebook
+	  tabs
+
 Thu Aug 05 00:52:15 2004  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.c: sin, cos, sinh, cosh were wrong for complex arguments
